<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:padding="15dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_url" />

    <Button
        android:id="@+id/open_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="openwebsite"
        android:text="@string/open_website" />

    <EditText
        android:id="@+id/loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_location"/>

    <Button
        android:id="@+id/open_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/openlocation"
        android:onClick="openlocation"/>
    <EditText
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="share text"/>

    <Button
        android:id="@+id/open_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/share_text"
        android:onClick="sharetext"/>



</LinearLayout>